# aioffice

./: .gitignore  DECISIONS.md  README.md  REVIEW.md  pyproject.toml
docs/: ADR-0001.md  ADR-0002.md  ARCHITECTURE.md  BACKLOG.md  CODEX.md  CODING_STANDARD.md  CONTRIBUTING.md  DOMAIN.md  PROJECT.md  ROADMAP.md  TASKS.md
docs/adr/: ADR-0001.md  ADR-0002.md
src/aioffice/: __init__.py  __main__.py
src/aioffice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aioffice/application/: __init__.py  artifact_metadata.py  case_numbers.py  cases.py  classification.py  document_extraction.py  mail.py  reply_drafts.py  repositories.py  storage.py
src/aioffice/domain/: __init__.py  artifacts.py  cases.py  events.py  storage.py  (+1 more)
storage/: aioffice.db
tests/application/: test_case_classification_service.py  test_case_dashboard_service.py  test_case_numbers.py  test_case_services.py  test_case_workspace_service.py  test_classification.py  test_document_extraction_service.py  test_mail_import_service.py  test_reply_draft_approval_service.py  test_reply_draft_dashboard_workspace.py  test_reply_draft_editing_service.py  test_reply_draft_generation_service.py  test_reply_drafts.py
tests/domain/: test_artifacts.py  test_cases.py  test_events.py  test_identifiers.py  test_storage.py
tests/infrastructure/: test_classification_repository.py  test_config.py  test_docx_text_extractor.py  test_filesystem_storage.py  test_imap_client.py  test_imported_mail_repository.py  test_mail_content_parser.py  test_mail_poller.py  test_ollama_case_classifier.py  test_ollama_reply_draft_generator.py  test_pdf_text_extractor.py  test_reply_draft_repository.py  test_runtime_import.py  test_sqlite_repository.py  test_watch_folder.py  test_web_app.py  test_web_reply_drafts.py
(+29 files in other folders)
