[project]
name = "aioffice"
version = "0.1.0"
description = "AI Office domain model"
requires-python = ">=3.14"

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2.0",
    "pytest>=8.4,<9.0",
    "ruff>=0.12,<0.13",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [".packages", ".tmp", ".venv"]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["aioffice"]
mypy_path = ["src"]
