[project]
name = "aioffice"
version = "0.1.0"
description = "AI Office domain model"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116,<0.117",
    "jinja2>=3.1,<4.0",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.20,<0.1",
    "uvicorn>=0.35,<0.36",
    "watchdog>=6.0,<7.0",
]

[project.scripts]
aioffice = "aioffice.__main__:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<0.29",
    "mypy>=1.17,<2.0",
    "pytest>=8.4,<9.0",
    "ruff>=0.12,<0.13",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aioffice = ["infrastructure/web/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [".packages", ".tmp", ".venv"]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["aioffice"]
mypy_path = ["src"]
